[gd_scene load_steps=2 format=3 uid="uid://c2qa54615oqtl"]

[ext_resource type="Script" uid="uid://bonw656j5bh88" path="res://game_box.gd" id="1_f2w58"]

[node name="GameBox" type="ColorRect"]
custom_minimum_size = Vector2(640, 40)
color = Color(0.0823529, 0.0823529, 0.0823529, 1)
script = ExtResource("1_f2w58")

[node name="GameNum" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(110, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -19.0
offset_right = 55.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=24][center]Game 1[/center][/font_size]"
scroll_active = false

[node name="P1Result" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -19.0
offset_right = -50.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=24][center]T[/center][/font_size]"
scroll_active = false

[node name="P2Result" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -19.0
offset_right = 80.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=24][center]T[/center][/font_size]"
scroll_active = false

[node name="P1Char" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(240, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 240.0
offset_bottom = 15.0
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=20][center]Character Name[/center][/font_size]"
scroll_active = false

[node name="P2Char" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(240, 30)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -15.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=20][center]Character Name[/center][/font_size]"
scroll_active = false
